--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_renewable_energy.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_renewable_energy.html
@@ -13,40 +13,172 @@
 
             <div class="notes-content">
 
-                <h3 id="WorkplaceDesign"><b><u>Workplace Design & Organisation:</b></u></h3>
-                <h3><ul>
-                    <li><b>Collaborative Spaces:</b> Open-plan offices with IoT environmental controls (e.g., Philips Smart Lighting)</li>
-                    <li><b>Automation Integration:</b> Amazon warehouses using Kiva robots reducing human walking by 80%</li>
-                    <li><b>Remote Work Tech:</b> VR meeting spaces like Meta Horizon Workrooms replacing physical offices</li>
-                    <li><b>Safety Systems:</b> Computer vision monitoring fatigue (e.g., SmartCap for mining operators)</li>
-                </ul></h3>
+                <!-- WIND POWER -->
+                <h3 id="wind-power"><b><u>Wind</u></b></h3>
+                <table id="windTable">
+                    <tr class="notes-table-header">
+                        <th>How Power is Generated</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Wind turns turbine blades connected to a generator</li>
+                                <li>Can be onshore or offshore installations</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Zero emissions during operation</li>
+                                <li>Low operating costs after installation</li>
+                                <li>Land can often still be used for agriculture</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Intermittent (dependent on wind availability)</li>
+                                <li>Visual impact and potential noise pollution</li>
+                                <li>Can harm birds and bats</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
 
-                <h3 id="BuildingDesign"><b><u>Buildings & Workspaces:</b></u></h3>
-                <h3><ul>
-                    <li><b>Smart Infrastructure:</b> The Edge (Amsterdam) using 28,000 sensors to optimize energy use</li>
-                    <li><b>Modular Construction:</b> Broad Group (China) assembling 57-storey skyscraper in 19 days</li>
-                    <li><b>Sustainable Materials:</b> Cross-laminated timber replacing steel in high-rises (e.g., Mjøstårnet, Norway)</li>
-                    <li><b>On-Demand Spaces:</b> WeWork using AI to predict desk utilisation patterns</li>
-                </ul></h3>
+                <!-- SOLAR POWER -->
+                <h3 id="solar-power"><b><u>Solar</u></b></h3>
+                <table id="solarTable">
+                    <tr class="notes-table-header">
+                        <th>How Power is Generated</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Photovoltaic cells convert sunlight directly to electricity</li>
+                                <li>Solar thermal systems use mirrors to concentrate heat</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Abundant and renewable energy source</li>
+                                <li>Can be installed at point of use (rooftops)</li>
+                                <li>Silent operation with no moving parts</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Intermittent (no power at night)</li>
+                                <li>Requires large areas for utility-scale generation</li>
+                                <li>Manufacturing process has environmental impact</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
 
-                <h3 id="ToolsEquipment"><b><u>Tools & Equipment:</b></u></h3>
-                <h3><ul>
-                    <li><b>Cobots:</b> Universal Robots' collaborative robots working alongside humans without safety cages</li>
-                    <li><b>Exoskeletons:</b> Hyundai Chairless Exoskeleton reducing assembly worker fatigue by 40%</li>
-                    <li><b>Digital Twins:</b> Siemens using virtual replicas to test factory layouts before implementation</li>
-                    <li><b>Additive Manufacturing:</b> GE Aviation 3D printing fuel nozzles with 25% weight reduction</li>
-                </ul></h3>
+                <!-- TIDAL POWER -->
+                <h3 id="tidal-power"><b><u>Tidal</u></b></h3>
+                <table id="tidalTable">
+                    <tr class="notes-table-header">
+                        <th>How Power is Generated</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Turbines capture energy from tidal flows</li>
+                                <li>Can use tidal barrages or tidal stream generators</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Highly predictable energy source</li>
+                                <li>High energy density of water</li>
+                                <li>Long operational lifespan</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Limited to coastal locations with strong tides</li>
+                                <li>High capital costs</li>
+                                <li>Potential impact on marine ecosystems</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
 
-                <div class="notes-content-subheader">
-                    <h2><hr><hr></h2>
-                </div>
+                <!-- HYDROELECTRIC POWER -->
+                <h3 id="hydro-power"><b><u>Hydro-electric</u></b></h3>
+                <table id="hydroTable">
+                    <tr class="notes-table-header">
+                        <th>How Power is Generated</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Flowing water turns turbines in dams or rivers</li>
+                                <li>Pumped storage can store energy</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Reliable and dispatchable power</li>
+                                <li>Long lifespan (50-100 years)</li>
+                                <li>Can provide flood control and irrigation</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Large dams disrupt ecosystems</li>
+                                <li>Displaces communities</li>
+                                <li>Methane emissions from reservoirs</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+
+                <!-- BIOMASS POWER -->
+                <h3 id="biomass-power"><b><u>Biomass</u></b></h3>
+                <table id="biomassTable">
+                    <tr class="notes-table-header">
+                        <th>How Power is Generated</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Organic matter burned directly or converted to biogas</li>
+                                <li>Can use wood, crops, or waste materials</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Can use waste products as fuel</li>
+                                <li>Carbon neutral when sustainably managed</li>
+                                <li>Provides baseload power</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Still produces air pollution when burned</li>
+                                <li>Can compete with food production for land</li>
+                                <li>Lower energy density than fossil fuels</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
 
                 
 
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_Industry.pdf">Industry Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A1/3.1.1_Industry.pdf">Questions</a>
                 </div> 
             </div>
         </div>
