--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_energy_storage_systems.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_energy_storage_systems.html
@@ -8,38 +8,106 @@
     <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(/images/note_pic.jpg)" title="metal background">
-                <h1 style="color:rgb(0, 0, 0)"><u><b>Industry</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>Energy storage systems including batteries</b></u></h1>
             </div>
 
             <div class="notes-content">
 
-                <h3 id="WorkplaceDesign"><b><u>Workplace Design & Organisation:</b></u></h3>
-                <h3><ul>
-                    <li><b>Collaborative Spaces:</b> Open-plan offices with IoT environmental controls (e.g., Philips Smart Lighting)</li>
-                    <li><b>Automation Integration:</b> Amazon warehouses using Kiva robots reducing human walking by 80%</li>
-                    <li><b>Remote Work Tech:</b> VR meeting spaces like Meta Horizon Workrooms replacing physical offices</li>
-                    <li><b>Safety Systems:</b> Computer vision monitoring fatigue (e.g., SmartCap for mining operators)</li>
-                </ul></h3>
+                <!-- KINETIC PUMPED STORAGE -->
+                <h3 id="pumped-storage"><b><u>Kinetic Pumped Storage</u></b></h3>
+                <table id="pumpedStorageTable">
+                    <tr class="notes-table-header">
+                        <th>How Energy is Stored</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Pumps move water to higher elevation during low demand</li>
+                                <li>Water released through turbines to generate power when needed</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Large-scale storage capacity (GW-hours possible)</li>
+                                <li>80% round-trip efficiency</li>
+                                <li>50-60 year lifespan</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Requires specific geography (two reservoirs at different heights)</li>
+                                <li>High initial construction costs</li>
+                                <li>Environmental impact on waterways</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
 
-                <h3 id="BuildingDesign"><b><u>Buildings & Workspaces:</b></u></h3>
-                <h3><ul>
-                    <li><b>Smart Infrastructure:</b> The Edge (Amsterdam) using 28,000 sensors to optimize energy use</li>
-                    <li><b>Modular Construction:</b> Broad Group (China) assembling 57-storey skyscraper in 19 days</li>
-                    <li><b>Sustainable Materials:</b> Cross-laminated timber replacing steel in high-rises (e.g., Mjøstårnet, Norway)</li>
-                    <li><b>On-Demand Spaces:</b> WeWork using AI to predict desk utilisation patterns</li>
-                </ul></h3>
+                <!-- ALKALINE BATTERIES -->
+                <h3 id="alkaline-batteries"><b><u>Alkaline Batteries</u></b></h3>
+                <table id="alkalineBatteryTable">
+                    <tr class="notes-table-header">
+                        <th>How Energy is Stored</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Zinc and manganese dioxide react with potassium hydroxide electrolyte</li>
+                                <li>Single-use (non-rechargeable) chemical reaction</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Low cost per unit</li>
+                                <li>Long shelf life (5-10 years)</li>
+                                <li>Widely available</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Non-rechargeable (single use)</li>
+                                <li>Lower energy density than lithium-ion</li>
+                                <li>Environmental waste when disposed</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
 
-                <h3 id="ToolsEquipment"><b><u>Tools & Equipment:</b></u></h3>
-                <h3><ul>
-                    <li><b>Cobots:</b> Universal Robots' collaborative robots working alongside humans without safety cages</li>
-                    <li><b>Exoskeletons:</b> Hyundai Chairless Exoskeleton reducing assembly worker fatigue by 40%</li>
-                    <li><b>Digital Twins:</b> Siemens using virtual replicas to test factory layouts before implementation</li>
-                    <li><b>Additive Manufacturing:</b> GE Aviation 3D printing fuel nozzles with 25% weight reduction</li>
-                </ul></h3>
-
-                <div class="notes-content-subheader">
-                    <h2><hr><hr></h2>
-                </div>
+                <!-- RECHARGEABLE BATTERIES -->
+                <h3 id="rechargeable-batteries"><b><u>Rechargeable Batteries</u></b></h3>
+                <table id="rechargeableBatteryTable">
+                    <tr class="notes-table-header">
+                        <th>How Energy is Stored</th>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Lithium-ion/NiMH cells store energy via reversible chemical reactions</li>
+                                <li>Can undergo hundreds/thousands of charge cycles</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-pro">
+                            <ul>
+                                <li>Reusable (300-1000+ charge cycles)</li>
+                                <li>Higher energy density than alkaline</li>
+                                <li>Versatile applications (EVs to grid storage)</li>
+                            </ul>
+                        </td>
+                        <td class="notes-table-data-con">
+                            <ul>
+                                <li>Higher upfront cost</li>
+                                <li>Degradation over time</li>
+                                <li>Recycling challenges for lithium batteries</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
 
                 
 
