--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_renewable_energy.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_renewable_energy.html
@@ -8,7 +8,7 @@
     <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(/images/note_pic.jpg)" title="metal background">
-                <h1 style="color:rgb(0, 0, 0)"><u><b>Industry</b></u></h1>
+                <h1 style="color:rgb(0, 0, 0)"><u><b>Renewable energy</b></u></h1>
             </div>
 
             <div class="notes-content">
