--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
@@ -45,7 +45,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="/.html">Topic 3: Developments in new materials</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/developments_in_new_materials.html">Topic 3: Developments in new materials</a>
                         </div>
                     </div>
                 </div>
