--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_technical_textiles.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_technical_textiles.html
@@ -120,7 +120,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3">Technical textiles Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A3/3.1.3_technical_textiles.pdf">Technical textiles Questions</a>
                 </div> 
             </div>
         </div>
