--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
@@ -55,7 +55,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="/.html">Topic 4: Systems approach to designing</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/systems_approach_to_designing.html">Topic 4: Systems approach to designing</a>
                         </div>
                     </div>
                 </div>
