--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_core_tech_gcse_notes.html
@@ -64,7 +64,7 @@
                     <div class="portfolio-img-background" style="background-image:url(/images/finishing_cover.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="/.html">Topic 5: Mechanical devices</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/mechanical_devices.html">Topic 5: Mechanical devices</a>
                             <!-- <a href="Notes\FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a> -->
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="/.html">Topic 6: Materials and their working properties</a>
+                            <a href="/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/materials_and_their_working_properties.html">Topic 6: Materials and their working properties</a>
                         </div>
                     </div>
                 </div>           
