--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_changing_magnitude_and_direction_of_fore.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_changing_magnitude_and_direction_of_fore.html
@@ -77,7 +77,7 @@
                 <!-- LINKAGES -->
                 <h3 id="BellCranks"><b><u>Bell Cranks:</b></u></h3>
                 <p>Linkages that change the direction of motion through 90°.</p>
-                <img src="../../../../../../../images/aqa_gcse/bell_crank.png" alt="Bell crank mechanism" class="motion-image">
+                <img src="../../../../../../../images/aqa_gcse/bell_crank.png" alt="Bell crank mechanism" class="motion-image" style="width: 300px; height: 200px; object-fit: contain;">
                 <h3><b>Examples: </b>Bicycle brakes, throttle linkages, car pedal systems</h3>
 
                 <div class="notes-content-subheader">
