--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_changing_magnitude_and_direction_of_fore.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/Core_technical_principles/aqa_gcse_core_tech_notes_topics/aqa_gcse_core_tech_notes_pages/aqa_gcse_changing_magnitude_and_direction_of_fore.html
@@ -125,7 +125,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A.pdf">Changing magnitude and direction of force Questions</a>
+                    <a href="../../../../../../../Questions (Word docs)/AQA GCSE Questions/Section A - Core technical principles/Topic A5/3.1.5_changing_magnitude_and_direction_of_force.pdf">Changing magnitude and direction of force Questions</a>
                 </div> 
             </div>
         </div>
